; ModuleID = '/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_delta.c_netplay_expected_input_size.c'
source_filename = "/home/carl/AnghaBench/RetroArch/network/netplay/extr_netplay_delta.c_netplay_expected_input_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@MAX_INPUT_DEVICES = common dso_local global i32 0, align 4
@RETRO_DEVICE_MASK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @netplay_expected_input_size(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %45, %2
  %8 = load i32, i32* %6, align 4
  %9 = load i32, i32* @MAX_INPUT_DEVICES, align 4
  %10 = icmp slt i32 %8, %9
  br i1 %10, label %11, label %48

11:                                               ; preds = %7
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* %6, align 4
  %14 = shl i32 1, %13
  %15 = and i32 %12, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %11
  br label %45

18:                                               ; preds = %11
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @RETRO_DEVICE_MASK, align 4
  %27 = and i32 %25, %26
  switch i32 %27, label %43 [
    i32 131, label %28
    i32 128, label %31
    i32 130, label %34
    i32 129, label %37
    i32 132, label %40
  ]

28:                                               ; preds = %18
  %29 = load i32, i32* %5, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %5, align 4
  br label %44

31:                                               ; preds = %18
  %32 = load i32, i32* %5, align 4
  %33 = add nsw i32 %32, 2
  store i32 %33, i32* %5, align 4
  br label %44

34:                                               ; preds = %18
  %35 = load i32, i32* %5, align 4
  %36 = add nsw i32 %35, 5
  store i32 %36, i32* %5, align 4
  br label %44

37:                                               ; preds = %18
  %38 = load i32, i32* %5, align 4
  %39 = add nsw i32 %38, 2
  store i32 %39, i32* %5, align 4
  br label %44

40:                                               ; preds = %18
  %41 = load i32, i32* %5, align 4
  %42 = add nsw i32 %41, 3
  store i32 %42, i32* %5, align 4
  br label %44

43:                                               ; preds = %18
  br label %44

44:                                               ; preds = %43, %40, %37, %34, %31, %28
  br label %45

45:                                               ; preds = %44, %17
  %46 = load i32, i32* %6, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %6, align 4
  br label %7

48:                                               ; preds = %7
  %49 = load i32, i32* %5, align 4
  ret i32 %49
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
